k8s/nginx/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
  namespace: frigui-nginx # NGINX Ingress Controller's namespace
spec:
  type: ExternalName
  externalName: back-service.frigui-dev.svc.cluster.local
