k8s/nginx/service-external-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  namespace: frigui-nginx # NGINX Ingress Controller's namespace
spec:
  type: ExternalName
  externalName: front-service.frigui-dev.svc.cluster.local
